--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,12 @@ body {
 }
 
 hi,h2,h3,h4,h5,h6 {
-	color:#333;
+	color:rgb(0, 0, 0);
 	line-height:1.1em;
 }
 
 p {
-	color:#333;
+	color:rgb(0, 0, 0);
 	font-size:13px;
 }
 a {
@@ -39,7 +39,7 @@ a {
     -webkit-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     outline: none;
-	color:#333;
+	color:rgb(0, 0, 0);
 }
 a:hover {
 	text-decoration: none;
@@ -61,11 +61,11 @@ a:hover {
 
 .text-center p {
 	margin-bottom:50px;
-	color:#333;
+	color:rgb(0, 0, 0);
 }
 
 .btn-default {
-  color: #333;
+  color: rgb(0, 0, 0);
   background-color: #fff;
   border-color: #fff;
   text-transform:uppercase;
@@ -105,7 +105,7 @@ a:hover {
 	padding-top:5px;
 	float: left;	
 	font-size: 25px;	
-	color:#333;	
+	color:rgb(0, 0, 0);	
 	text-transform:uppercase;
 	font-weight:900;
   
@@ -134,7 +134,7 @@ a:hover {
 }
 .nav-tabs > li > a {	
 	border-radius:0;
-	color:#333;
+	color:rgb(0, 0, 0);
 	padding:30px;
 }
 
@@ -529,7 +529,7 @@ a:hover {
 .lates h2 {
 	font-size:20px;
 	font-weight:600;
-	color:#333;
+	color:rgb(0, 0, 0);
 }
 
 .lates img {
@@ -820,7 +820,7 @@ a.btn-primary:hover {
 .widget .entry-meta span {
   display: inline-block;
   margin-right: 10px;
-  color:#333;
+  color:rgb(0, 0, 0);
 }
 
 .widget .entry-meta span a:hover {
